fixed minor issue on mobile view

--- a/src/app/component/timetable-root/mobile-appointment-view/mobile-appointment-view.component.less
+++ b/src/app/component/timetable-root/mobile-appointment-view/mobile-appointment-view.component.less
@@ -1,7 +1,6 @@
 
 
-.mobike-day-title{
-    color: white;
+.mobile-day-title{
     margin: 0;
     text-align: center;
     margin-top: 2rem;
